@@ -22,12 +22,15 @@ Tactics
   beta-iota-reduced after type-checking. This has an impact on the
   type of the variables that the tactic "refine" introduces in the
   context, producing types a priori closer to the expectations.
+- In "Tactic Notation" or "TACTIC EXTEND", entry "constr_with_bindings"
+  now uses type classes and rejects terms with unresolved holes, like
+  entry "constr" does. To get the former behavior use
+  "open_constr_with_bindings" (possible source of incompatibility.
 
 Vernacular Commands
 
 - Goals context can be printed in a more compact way when "Set
   Printing Compact Contexts" is activated.
-
 
 Standard Library
 
